Temp Fixes Update (no more slight jumps), removed irrelevant stuff

--- a/uber.css
+++ b/uber.css
@@ -59,22 +59,25 @@
 	text-align:center;
 	margin:0 auto;
 }
-/* TEMP FIXES!!!
+/* Fixed Header
 ----------------------------------------------------------------------------- */
 #HeaderWrapper.Fixed{
 	position:relative
 }
 #HeaderWrapper.Fixed #MainContentHeader {
-	top: 360px;
+	top:310px;
 }
 #HeaderWrapper.Fixed #MainContentHeader #PageTitleWrapper h1 {
 	font-size:24px!important;
-	padding-bottom: 20px;:
+	padding-bottom:20px;:
 }
 /* HIDES
 ----------------------------------------------------------------------------- */
 /* Hide Gamebanana Items */
 #AboutModule,
+.ModuleTools,
+div#SubmissionType,
+.IconSheet.Beacon.HelpBeacon,
 .IconSheet.Logo,
 div#TopBanner,
 div#AtfLeaderboard,
@@ -95,6 +98,7 @@ div#SiteSkinWrapper,
 #HeaderWrapper .GameShortcut,
 .BasicSubFeedModule,
 .TourWrapper,
+button#sbmtpstunxmplfr,
 #DropdownMenuSubNavigator .sf-menu > li:nth-child(4),
 img[src="http://cdn.vvgnet.com/gamebanana/static/img/icons/new_window.gif"]{
 	display:none!important
@@ -111,6 +115,9 @@ body{
 	padding-bottom:30px;
 	background:none;
 	margin:0!important;
+}
+#HeaderWrapper.Fixed + #MainContent{
+	padding-top:245px;
 }
 #ColumnGrid{
 	overflow:hidden;
@@ -245,7 +252,7 @@ div#CoreStrip{
 	padding:10px 0px 10px 0;
 }
 #HeaderWrapper header #HomeLink {
-	margin-right: 18px;
+	margin-right:18px;
 }
 #NavigatorTabs li {
 	margin:0 3px 3px 0;
@@ -373,12 +380,13 @@ nav#BasicSubNavigator{
 	-o-transition:all 0.1s ease-in-out;
 	transition:all 0.1s ease-in-out;
 }
+#HeaderWrapper.Fixed #MainContentHeader #BasicSubNavigator{display:none!important}
 nav#BasicSubNavigator li{
 	background:none;
 	border:none;
 	margin-left:3px;
 	position:relative;
-	box-shadow: none;
+	box-shadow:none;
 }
 #BasicSubNavigator li.ActiveEntry{
 	padding-top:0;
@@ -481,6 +489,7 @@ div.Module > h3,
 	background:#a33c1a;
 	border-bottom:none;
 	border-left:none;
+	border-top:none;
 	box-shadow:0px 2px 6px #111;
 	font-family:"Roboto Condensed", Verdana, Geneva, sans-serif;
 	font-size:16px;
